generation d'un crud pour l'entité Manga + execution de la commande "composer remove symfony/ux-turbo" pour que les requetes de la table Manga puissent etre executés

--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="/">Home Page</a></li>
         <li><a href="/hello">Hello</a></li>
+        <li><a href="/manga">Manga</a></li>
         <li><a href="/bonjour/mathis">Bonjour avec params</a></li>
     </ul>
 </nav>
